--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,9 @@
 @import "../../node_modules/bootstrap/dist/css/bootstrap.css";
 
+html{
+    scroll-behavior: smooth;
+}
+
 li{
     list-style: none;
 }
